--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "openscad-customizer-rs"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+authors = "Michael Angeles"
+description = "An interface to the OpenSCAD Customizer."
+readme = "https://github.com/MeechaelA/openscad-customizer-rs/blob/0.1.0/ReadMe.md"
+repository = "https://github.com/MeechaelA/openscad-customizer-rs/tree/0.1.0"
+keywords = "OpenSCAD"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,5 +20,4 @@ serde_json = {version = "1.0"}
 exclude = [
     "data/*",
     "Cargo.lock"
-
 ]
