Preparing for release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,16 @@ name = "openscad-customizer-rs"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-authors = "Michael Angeles"
+authors = ["Michael Angeles"]
 description = "An interface to the OpenSCAD Customizer."
 readme = "https://github.com/MeechaelA/openscad-customizer-rs/blob/0.1.0/ReadMe.md"
 repository = "https://github.com/MeechaelA/openscad-customizer-rs/tree/0.1.0"
-keywords = "OpenSCAD"
+keywords = ["OpenSCAD", "CAD", "Computer Aided Design", "3D"]
 
+exclude = [
+    "data/*",
+    "Cargo.lock"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,8 +20,3 @@ keywords = "OpenSCAD"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
 
-[package]
-exclude = [
-    "data/*",
-    "Cargo.lock"
-]
