--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT"
 authors = ["Michael Angeles"]
 description = "An interface to the OpenSCAD Customizer."
-readme = "https://github.com/MeechaelA/openscad-customizer-rs/blob/main/ReadMe.md"
+readme = "ReadMe.md"
 repository = "https://github.com/MeechaelA/openscad-customizer-rs"
 keywords = ["OpenSCAD", "CAD", "Computer Aided Design", "3D"]
 
