--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Michael Angeles"]
 description = "An interface to the OpenSCAD Customizer."
 readme = "ReadMe.md"
 repository = "https://github.com/MeechaelA/openscad-customizer-rs"
-keywords = ["OpenSCAD", "CAD", "Computer Aided Design", "3D"]
+keywords = ["OpenSCAD", "CAD", "3D"]
 
 exclude = [
     "data/*",
